--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,7 +32,7 @@ nextcloud_add_test(XmlParse)
 nextcloud_add_test(ChecksumValidator)
 
 nextcloud_add_test(ClientSideEncryption)
-##nextcloud_add_test(ExcludedFiles)
+###nextcloud_add_test(ExcludedFiles)
 
 nextcloud_add_test(Utility)
 nextcloud_add_test(SyncEngine)
@@ -50,15 +50,15 @@ nextcloud_add_test(AsyncOp)
 nextcloud_add_test(UploadReset)
 nextcloud_add_test(AllFilesDeleted)
 nextcloud_add_test(Blacklist)
-##nextcloud_add_test(LocalDiscovery)
+###nextcloud_add_test(LocalDiscovery)
 nextcloud_add_test(RemoteDiscovery)
 nextcloud_add_test(Permissions)
 nextcloud_add_test(SelectiveSync)
-##nextcloud_add_test(DatabaseError)
+nextcloud_add_test(DatabaseError)
 nextcloud_add_test(LockedFiles)
 nextcloud_add_test(FolderWatcher)
 nextcloud_add_test(Capabilities)
-##nextcloud_add_test(PushNotifications)
+###nextcloud_add_test(PushNotifications)
 nextcloud_add_test(Theme)
 nextcloud_add_test(IconUtils)
 nextcloud_add_test(NotificationCache)
@@ -82,7 +82,7 @@ endif()
 nextcloud_add_test(LongPath)
 nextcloud_add_benchmark(LargeSync)
 nextcloud_add_test(Account)
-##nextcloud_add_test(FolderMan)
+nextcloud_add_test(FolderMan)
 nextcloud_add_test(RemoteWipe)
 nextcloud_add_test(OAuth)
 
@@ -102,20 +102,15 @@ nextcloud_add_test(UserLine)
 nextcloud_add_test(HeaderButton)
 nextcloud_add_test(ActivityData)
 nextcloud_add_test(TalkReply)
-
-#Failed TCs
-#nextcloud_add_test(ExcludedFiles)
-#nextcloud_add_test(PushNotifications)
-#nextcloud_add_test(LocalDiscovery)
-#nextcloud_add_test(SettingsDialog)
-#nextcloud_add_test(OwncloudSetupPage)
-#nextcloud_add_test(OwncloudAdvancedSetupPage)
-#nextcloud_add_test(ShareUserGroupPermissionWidget)
-#nextcloud_add_test(ShareUserGroupWidget)
-#nextcloud_add_test(ActivityListModel)
-#nextcloud_add_test(Window)
-#nextcloud_add_test(FolderWizard)
-#nextcloud_add_test(GeneralSettings)
+nextcloud_add_test(ActivityListModel)
+nextcloud_add_test(SettingsDialog)
+nextcloud_add_test(OwncloudSetupPage)
+nextcloud_add_test(OwncloudAdvancedSetupPage)
+nextcloud_add_test(ShareUserGroupPermissionWidget)
+nextcloud_add_test(ShareUserGroupWidget)
+nextcloud_add_test(GeneralSettings)
+nextcloud_add_test(FolderWizard)
+###nextcloud_add_test(Window)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
