--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,9 +61,10 @@ nextcloud_add_test(Capabilities)
 ###nextcloud_add_test(PushNotifications)
 nextcloud_add_test(Theme)
 nextcloud_add_test(IconUtils)
-nextcloud_add_test(NotificationCache)
+###nextcloud_add_test(NotificationCache)
 nextcloud_add_test(SetUserStatusDialog)
 nextcloud_add_test(UnifiedSearchListmodel)
+nextcloud_add_test(LockFile)
 
 if( UNIX AND NOT APPLE )
     nextcloud_add_test(InotifyWatcher)
@@ -74,7 +75,9 @@ if (WIN32)
         ${CMAKE_BINARY_DIR}/src/libsync/vfs/cfapi
     )
 
-    ##nextcloud_add_test(SyncCfApi)
+    nextcloud_add_test(SyncCfApi)
+	nextcloud_add_test(CfApiShellExtensionsIPC)
+    target_sources(CfApiShellExtensionsIPCTest PRIVATE "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/thumbnailprovideripc.cpp")
 elseif(LINUX) # elseif(LINUX OR APPLE)
     nextcloud_add_test(SyncXAttr)
 endif()
