--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,98 +16,103 @@ target_link_libraries(testutils PUBLIC Nextcloud::sync Qt5::Test)
 target_include_directories(testutils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(testutils PROPERTIES FOLDER Tests)
 
-#nextcloud_add_test(NextcloudPropagator)
+nextcloud_add_test(NextcloudPropagator)
 
-#IF(BUILD_UPDATER)
-#    nextcloud_add_test(Updater)
-#endif()
+IF(BUILD_UPDATER)
+    nextcloud_add_test(Updater)
+endif()
 
-#nextcloud_add_test(NetrcParser)
-#nextcloud_add_test(OwnSql)
-#nextcloud_add_test(SyncJournalDB)
-#nextcloud_add_test(SyncFileItem)
-#nextcloud_add_test(ConcatUrl)
-#nextcloud_add_test(Cookies)
-#nextcloud_add_test(XmlParse)
-#nextcloud_add_test(ChecksumValidator)
+nextcloud_add_test(NetrcParser)
+nextcloud_add_test(OwnSql)
+nextcloud_add_test(SyncJournalDB)
+nextcloud_add_test(SyncFileItem)
+nextcloud_add_test(ConcatUrl)
+nextcloud_add_test(Cookies)
+nextcloud_add_test(XmlParse)
+nextcloud_add_test(ChecksumValidator)
 
-#nextcloud_add_test(ClientSideEncryption)
-#nextcloud_add_test(ExcludedFiles)
+nextcloud_add_test(ClientSideEncryption)
+###nextcloud_add_test(ExcludedFiles)
 
-#nextcloud_add_test(Utility)
-##nextcloud_add_test(SyncEngine)
-##nextcloud_add_test(SyncVirtualFiles)
-##nextcloud_add_test(SyncMove)
-#nextcloud_add_test(SyncDelete)
-#nextcloud_add_test(SyncConflict)
-##nextcloud_add_test(SyncFileStatusTracker)
-#nextcloud_add_test(Download)
+nextcloud_add_test(Utility)
+nextcloud_add_test(SyncEngine)
+nextcloud_add_test(SyncVirtualFiles)
+nextcloud_add_test(SyncMove)
+nextcloud_add_test(SyncDelete)
+nextcloud_add_test(SyncConflict)
+nextcloud_add_test(SyncFileStatusTracker)
+nextcloud_add_test(Download)
+
+#Timeout TC
 ##nextcloud_add_test(ChunkingNg)
-#nextcloud_add_test(AsyncOp)
-#nextcloud_add_test(UploadReset)
-#nextcloud_add_test(AllFilesDeleted)
-#nextcloud_add_test(Blacklist)
-##nextcloud_add_test(LocalDiscovery)
-#nextcloud_add_test(RemoteDiscovery)
-##nextcloud_add_test(Permissions)
-#nextcloud_add_test(SelectiveSync)
-#nextcloud_add_test(DatabaseError)
-#nextcloud_add_test(LockedFiles)
-#nextcloud_add_test(FolderWatcher)
-#nextcloud_add_test(Capabilities)
-##nextcloud_add_test(PushNotifications)
-##nextcloud_add_test(Theme)
-##nextcloud_add_test(IconUtils)
-#nextcloud_add_test(NotificationCache)
-##nextcloud_add_test(SetUserStatusDialog)
-##nextcloud_add_test(UnifiedSearchListmodel)
+nextcloud_add_test(AsyncOp)
+nextcloud_add_test(UploadReset)
+nextcloud_add_test(AllFilesDeleted)
+nextcloud_add_test(Blacklist)
+nextcloud_add_test(LocalDiscovery)
+nextcloud_add_test(RemoteDiscovery)
+nextcloud_add_test(Permissions)
+nextcloud_add_test(SelectiveSync)
+nextcloud_add_test(DatabaseError)
+nextcloud_add_test(LockedFiles)
+nextcloud_add_test(FolderWatcher)
+nextcloud_add_test(Capabilities)
+###nextcloud_add_test(PushNotifications)
+nextcloud_add_test(Theme)
+nextcloud_add_test(IconUtils)
+###nextcloud_add_test(NotificationCache)
+nextcloud_add_test(SetUserStatusDialog)
+nextcloud_add_test(UnifiedSearchListmodel)
+nextcloud_add_test(LockFile)
 
-#if( UNIX AND NOT APPLE )
-#    nextcloud_add_test(InotifyWatcher)
-#endif(UNIX AND NOT APPLE)
+if( UNIX AND NOT APPLE )
+    nextcloud_add_test(InotifyWatcher)
+endif(UNIX AND NOT APPLE)
 
-#if (WIN32)
-#    include_directories(
-#        ${CMAKE_BINARY_DIR}/src/libsync/vfs/cfapi
-#    )
+if (WIN32)
+    include_directories(
+        ${CMAKE_BINARY_DIR}/src/libsync/vfs/cfapi
+    )
 
-##    nextcloud_add_test(SyncCfApi)
-#elseif(LINUX) # elseif(LINUX OR APPLE)
-#    nextcloud_add_test(SyncXAttr)
-#endif()
+    nextcloud_add_test(SyncCfApi)
+	nextcloud_add_test(CfApiShellExtensionsIPC)
+    target_sources(CfApiShellExtensionsIPCTest PRIVATE "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/thumbnailprovideripc.cpp")
+elseif(LINUX) # elseif(LINUX OR APPLE)
+    nextcloud_add_test(SyncXAttr)
+endif()
 
-#nextcloud_add_test(LongPath)
-#nextcloud_add_benchmark(LargeSync)
+nextcloud_add_test(LongPath)
+nextcloud_add_benchmark(LargeSync)
+nextcloud_add_test(Account)
+nextcloud_add_test(FolderMan)
+nextcloud_add_test(RemoteWipe)
+nextcloud_add_test(OAuth)
 
-#nextcloud_add_test(Account)
-#nextcloud_add_test(FolderMan)
-#nextcloud_add_test(RemoteWipe)
-
-#nextcloud_add_test(OAuth)
-
-#nextcloud_add_test(FolderStatusModel)
-#nextcloud_add_test(AccountSettings)
-#nextcloud_add_test(ActivityListModel)
-#nextcloud_add_test(FolderWizard)
-#nextcloud_add_test(GeneralSettings)
-#nextcloud_add_test(ConfigFile)
-#nextcloud_add_test(FolderStatusDelegate)
-#nextcloud_add_test(SettingsDialog)
-##nextcloud_add_test(UserModel)
-
+#New TCs
+nextcloud_add_test(FolderStatusModel)
+nextcloud_add_test(AccountSettings)
 nextcloud_add_test(ShareDialog)
-#nextcloud_add_test(ShareLinkWidget)
-#nextcloud_add_test(ShareUserGroupPermissionWidget)
-#nextcloud_add_test(ShareUserGroupWidget)
-#nextcloud_add_test(ShareUserMessageWidget)
-#nextcloud_add_test(Flow2AuthWidget)
-#nextcloud_add_test(OwncloudWizard)
-#nextcloud_add_test(OwncloudSetupPage)
+nextcloud_add_test(ConfigFile)
+nextcloud_add_test(UserModel)
+nextcloud_add_test(ShareUserMessageWidget)
+nextcloud_add_test(OwncloudWizard)
+nextcloud_add_test(ShareLinkWidget)
+nextcloud_add_test(Flow2AuthWidget)
+nextcloud_add_test(FolderStatusDelegate)
+nextcloud_add_test(Welcome)
+nextcloud_add_test(UserLine)
+nextcloud_add_test(HeaderButton)
+nextcloud_add_test(ActivityData)
+nextcloud_add_test(TalkReply)
+nextcloud_add_test(ActivityListModel)
+nextcloud_add_test(SettingsDialog)
+nextcloud_add_test(OwncloudSetupPage)
 nextcloud_add_test(OwncloudAdvancedSetupPage)
-#nextcloud_add_test(Welcome)
-#nextcloud_add_test(UserLine)
-#nextcloud_add_test(HeaderButton)
-#nextcloud_add_test(Window)
+nextcloud_add_test(ShareUserGroupPermissionWidget)
+nextcloud_add_test(ShareUserGroupWidget)
+nextcloud_add_test(GeneralSettings)
+nextcloud_add_test(FolderWizard)
+###nextcloud_add_test(Window)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
