added change of NMCOUD-373

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -97,7 +97,7 @@ if (WIN32)
     )
 
     nextcloud_add_test(SyncCfApi)
-	nextcloud_add_test(CfApiShellExtensionsIPC)
+        nextcloud_add_test(CfApiShellExtensionsIPC)
     target_sources(CfApiShellExtensionsIPCTest PRIVATE "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/thumbnailprovideripc.cpp" "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/customstateprovideripc.cpp" "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/ipccommon.cpp")
 elseif(LINUX) # elseif(LINUX OR APPLE)
     nextcloud_add_test(SyncXAttr)
@@ -109,8 +109,11 @@ nextcloud_add_benchmark(LargeSync)
 nextcloud_add_test(Account)
 nextcloud_add_test(FolderMan)
 nextcloud_add_test(RemoteWipe)
-
 nextcloud_add_test(OAuth)
+
+#New NMC-Test Case's
+nextcloud_add_test(GeneralSettings)
+nextcloud_add_test(ConfigFile)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
