MagentaStyle.qml added

--- a/theme.qrc.in
+++ b/theme.qrc.in
@@ -235,5 +235,6 @@
         <file>theme/delete.svg</file>
         <file>theme/send.svg</file>
         <file>theme/call-notification.wav</file>
+        <file>theme/magenta/accountAvatarIcon.svg</file>
     </qresource>
 </RCC>
