--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,11 +265,11 @@ if(BUILD_SHELL_INTEGRATION)
     add_subdirectory(shell_integration)
 endif()
 
-if(BUILD_TESTING)
+#if(BUILD_TESTING)
     include(CTest)
     enable_testing()
     add_subdirectory(test)
-endif()
+#endif()
 
 configure_file(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 configure_file(version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h)
