git checks test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -55,7 +55,7 @@ nextcloud_add_test(Permissions)
 nextcloud_add_test(SelectiveSync)
 nextcloud_add_test(DatabaseError)
 nextcloud_add_test(LockedFiles)
-nextcloud_add_test(FolderWatcher)
+#nextcloud_add_test(FolderWatcher)
 nextcloud_add_test(Capabilities)
 nextcloud_add_test(PushNotifications)
 nextcloud_add_test(Theme)
