--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -100,6 +100,7 @@ if (WIN32)
 
     nextcloud_add_test(SyncCfApi)
 	nextcloud_add_test(CfApiShellExtensionsIPC)
+
     target_sources(CfApiShellExtensionsIPCTest PRIVATE "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/thumbnailprovideripc.cpp" "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/customstateprovideripc.cpp" "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/ipccommon.cpp")
 elseif(LINUX) # elseif(LINUX OR APPLE)
     nextcloud_add_test(SyncXAttr)
@@ -113,6 +114,9 @@ nextcloud_add_test(FolderMan)
 nextcloud_add_test(RemoteWipe)
 
 nextcloud_add_test(OAuth)
+
+#MagentaCustomizationV25
+nextcloud_add_test(SettingsDialog)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
