--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,50 +25,50 @@ IF(BUILD_UPDATER)
 endif()
 
 nextcloud_add_test(NetrcParser)
-#nextcloud_add_test(OwnSql)
-#nextcloud_add_test(SyncJournalDB)
-#nextcloud_add_test(SyncFileItem)
-#nextcloud_add_test(ConcatUrl)
+nextcloud_add_test(OwnSql)
+nextcloud_add_test(SyncJournalDB)
+nextcloud_add_test(SyncFileItem)
+nextcloud_add_test(ConcatUrl)
 nextcloud_add_test(Cookies)
 nextcloud_add_test(XmlParse)
-#nextcloud_add_test(ChecksumValidator)
+nextcloud_add_test(ChecksumValidator)
 
-#nextcloud_add_test(ClientSideEncryption)
-#nextcloud_add_test(ExcludedFiles)
+nextcloud_add_test(ClientSideEncryption)
+nextcloud_add_test(ExcludedFiles)
 
-#nextcloud_add_test(Utility)
-#nextcloud_add_test(SyncEngine)
-#nextcloud_add_test(SyncVirtualFiles)
-#nextcloud_add_test(SyncMove)
-#nextcloud_add_test(SyncDelete)
-#nextcloud_add_test(SyncConflict)
-#nextcloud_add_test(SyncFileStatusTracker)
-#nextcloud_add_test(Download)
-#nextcloud_add_test(ChunkingNg)
-#nextcloud_add_test(AsyncOp)
-#nextcloud_add_test(UploadReset)
-#nextcloud_add_test(AllFilesDeleted)
-#nextcloud_add_test(Blacklist)
-#nextcloud_add_test(LocalDiscovery)
-#nextcloud_add_test(RemoteDiscovery)
-#nextcloud_add_test(Permissions)
-#nextcloud_add_test(SelectiveSync)
-#nextcloud_add_test(DatabaseError)
-#nextcloud_add_test(LockedFiles)
-#nextcloud_add_test(FolderWatcher)
-#nextcloud_add_test(Capabilities)
-#nextcloud_add_test(PushNotifications)
-#nextcloud_add_test(Theme)
-#nextcloud_add_test(IconUtils)
-#nextcloud_add_test(SetUserStatusDialog)
-#nextcloud_add_test(UnifiedSearchListmodel)
-#nextcloud_add_test(ActivityListModel)
-#nextcloud_add_test(ActivityData)
-#nextcloud_add_test(TalkReply)
-#nextcloud_add_test(LockFile)
-#nextcloud_add_test(ShareModel)
-#nextcloud_add_test(ShareeModel)
-#nextcloud_add_test(SortedShareModel)
+nextcloud_add_test(Utility)
+nextcloud_add_test(SyncEngine)
+nextcloud_add_test(SyncVirtualFiles)
+nextcloud_add_test(SyncMove)
+nextcloud_add_test(SyncDelete)
+nextcloud_add_test(SyncConflict)
+nextcloud_add_test(SyncFileStatusTracker)
+nextcloud_add_test(Download)
+nextcloud_add_test(ChunkingNg)
+nextcloud_add_test(AsyncOp)
+nextcloud_add_test(UploadReset)
+nextcloud_add_test(AllFilesDeleted)
+nextcloud_add_test(Blacklist)
+nextcloud_add_test(LocalDiscovery)
+nextcloud_add_test(RemoteDiscovery)
+nextcloud_add_test(Permissions)
+nextcloud_add_test(SelectiveSync)
+nextcloud_add_test(DatabaseError)
+nextcloud_add_test(LockedFiles)
+nextcloud_add_test(FolderWatcher)
+nextcloud_add_test(Capabilities)
+nextcloud_add_test(PushNotifications)
+nextcloud_add_test(Theme)
+nextcloud_add_test(IconUtils)
+nextcloud_add_test(SetUserStatusDialog)
+nextcloud_add_test(UnifiedSearchListmodel)
+nextcloud_add_test(ActivityListModel)
+nextcloud_add_test(ActivityData)
+nextcloud_add_test(TalkReply)
+nextcloud_add_test(LockFile)
+nextcloud_add_test(ShareModel)
+nextcloud_add_test(ShareeModel)
+nextcloud_add_test(SortedShareModel)
 nextcloud_add_test(SecureFileDrop)
 nextcloud_add_test(FileTagModel)
 nextcloud_add_test(SyncConflictsModel)
@@ -113,9 +113,6 @@ nextcloud_add_test(FolderMan)
 nextcloud_add_test(RemoteWipe)
 
 nextcloud_add_test(OAuth)
-
-#MagentaCustomizationV25
-nextcloud_add_test(SettingsDialog)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
