Added config commaon changes

--- a/config.h.in
+++ b/config.h.in
@@ -63,5 +63,8 @@
 #cmakedefine CFAPI_SHELLEXT_THUMBNAIL_HANDLER_DISPLAY_NAME "@CFAPI_SHELLEXT_THUMBNAIL_HANDLER_DISPLAY_NAME@"
 
 #cmakedefine CFAPI_SHELL_EXTENSIONS_LIB_NAME "@CFAPI_SHELL_EXTENSIONS_LIB_NAME@"
+#cmakedefine APPLICATION_IMPRINT_URL "@APPLICATION_IMPRINT_URL@"
+#cmakedefine APPLICATION_PRIVACY_URL "@APPLICATION_PRIVACY_URL@"
+#cmakedefine APPLICATION_OPEN_SOURCE_URL "@APPLICATION_OPEN_SOURCE_URL@"
 
 #endif
