UserModel UT implementation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -99,7 +99,7 @@ if (WIN32)
     )
 
     nextcloud_add_test(SyncCfApi)
-	nextcloud_add_test(CfApiShellExtensionsIPC)
+        nextcloud_add_test(CfApiShellExtensionsIPC)
     target_sources(CfApiShellExtensionsIPCTest PRIVATE "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/thumbnailprovideripc.cpp" "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/customstateprovideripc.cpp" "${CMAKE_SOURCE_DIR}/src/libsync/vfs/cfapi/shellext/ipccommon.cpp")
 elseif(LINUX) # elseif(LINUX OR APPLE)
     nextcloud_add_test(SyncXAttr)
@@ -113,6 +113,10 @@ nextcloud_add_test(FolderMan)
 nextcloud_add_test(RemoteWipe)
 
 nextcloud_add_test(OAuth)
+
+#MagentaCustomizationV25
+nextcloud_add_test(UserLine)
+nextcloud_add_test(Window)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
