Changes related to settings page toolbar icon

--- a/theme.qrc.in
+++ b/theme.qrc.in
@@ -236,5 +236,8 @@
         <file>theme/delete.svg</file>
         <file>theme/send.svg</file>
         <file>theme/call-notification.wav</file>
+        <file>theme/magenta/settings_magenta.svg</file>
+        <file>theme/magenta/network_magenta.svg</file>
+        <file>theme/magenta/account_magenta.svg</file>
     </qresource>
 </RCC>
