--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -115,8 +115,8 @@ nextcloud_add_test(RemoteWipe)
 nextcloud_add_test(OAuth)
 
 #MagentaCustomizationV25
-nextcloud_add_test(UserLine)
-nextcloud_add_test(Window)
+#nextcloud_add_test(UserLine)
+#nextcloud_add_test(Window)
 
 configure_file(test_journal.db "${PROJECT_BINARY_DIR}/bin/test_journal.db" COPYONLY)
 
