Changes related to add button customization

--- a/theme.qrc.in
+++ b/theme.qrc.in
@@ -184,6 +184,7 @@
         <file>theme/black/external@2x.png</file>
         <file>theme/colored/external.png</file>
         <file>theme/colored/external@2x.png</file>
+        <file>theme/colored/circle-add-magenta.svg</file>
         <file>theme/white/folder.svg</file>
         <file>theme/white/more-apps.svg</file>
         <file>theme/white/talk-app.svg</file>
