Fixed compilation error: Qt are not found

--- a/src/libsync/CMakeLists.txt
+++ b/src/libsync/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(libsync)
 include(DefinePlatformDefaults)
+find_package(Qt5 REQUIRED COMPONENTS Widgets Svg Qml Quick QuickControls2 Xml Network)
 
 set(CMAKE_AUTOMOC TRUE)
 
