--- a/theme.qrc.in
+++ b/theme.qrc.in
@@ -238,5 +238,11 @@
         <file>theme/delete.svg</file>
         <file>theme/send.svg</file>
         <file>theme/call-notification.wav</file>
+        <file>theme/remove.svg</file>
+        <file>theme/logout.svg</file>
+        <file>theme/close.svg</file>
+        <file>theme/pause.svg</file>
+        <file>theme/settings.svg</file>
+        <file>theme/accountAvatarIcon.svg</file>
     </qresource>
 </RCC>
