--- a/theme.qrc.in
+++ b/theme.qrc.in
@@ -195,12 +195,16 @@
         <file>theme/black/user.svg</file>
         <file>theme/white/add.svg</file>
         <file>theme/black/add.svg</file>
+        <file>theme/black/add-circle.svg</file>
         <file>theme/black/activity.svg</file>
         <file>theme/black/bell.svg</file>
         <file>theme/black/wizard-talk.svg</file>
         <file>theme/black/calendar.svg</file>
         <file>theme/black/deck.svg</file>
+        <file>theme/black/refresh.svg</file>
         <file>theme/black/state-info.svg</file>
+        <file>theme/lock.svg</file>
+        <file>theme/black/delete.svg</file>
         <file>theme/close.svg</file>
         <file>theme/black/close.svg</file>
         <file>theme/white/close.svg</file>
