--- a/theme.qrc.in
+++ b/theme.qrc.in
@@ -225,6 +225,7 @@
         <file>theme/colored/talk-bordered.svg</file>
         <file>theme/colored/@APPLICATION_ICON_NAME@-icon.svg</file>
         <file>theme/add.svg</file>
+        <file>theme/NMCIcons/LogoMagenta.svg</file>
         <file>theme/share.svg</file>
         <file>theme/reply.svg</file>
         <file>theme/magnifying-glass.svg</file>
