--- a/.devcontainer/Dockerfile-win
+++ b/.devcontainer/Dockerfile-win
@@ -20,6 +20,15 @@ RUN apt-get -y update && \
     ln -s ../../bin/x86_64-w64-mingw32-g++ g++ && \
     ln -s ../../bin/x86_64-w64-mingw32-windres windres
 
+# dependency 1: compile openssl 
+RUN \
+    mkdir -p /opt/win/build/openssl && \
+    curl -L $sslpackage | tar xz -C /opt/win/build/openssl --strip-components 1 && \
+    cd /opt/win/build/openssl && \
+    ./Configure --cross-compile-prefix=x86_64-w64-mingw32- \
+       --prefix=/opt/win/openssl --openssldir=/opt/win/openssl no-idea no-mdc2 no-rc5 shared mingw64 && \
+    make install
+
 # download the qt5 package and install to /opt
 RUN \
     set -eux && \
@@ -34,6 +43,7 @@ RUN \
     mkdir -p /opt/win/qt && \
     cd /opt/win/build/qtpackage && \
     ./configure -debug-and-release -opensource -confirm-license -xplatform win32-g++ -device-option CROSS_COMPILE=/usr/x86_64-w64-mingw32/bin/ \
+      -DOPENSSL_ROOT_DIR=/opt/win/build/openssl \
       -opengl desktop \
       -qt-zlib -qt-libjpeg -qt-libpng -qt-pcre \
       -skip qt3d \
@@ -75,21 +85,12 @@ RUN \
     
 COPY ./toolchain-x86_64-win.cmake /opt/win/build/toolchain-x86_64-win.cmake
 
-# dependency 1: compile qtkeychain OS project for win
+# dependency 2: compile qtkeychain OS project for win
 RUN \
     git clone https://github.com/frankosterfeld/qtkeychain.git /opt/win/qtkeychain && \
     cd /opt/win/qtkeychain && \
     cmake . -DCMAKE_BUILD_TYPE="Release" -DCMAKE_TOOLCHAIN_FILE=/opt/win/build/toolchain-x86_64-win.cmake \
             -DCMAKE_INSTALL_PREFIX=/opt/win/qtkeychain && \
-    make install
-
-# dependency 2: compile openssl 
-RUN \
-    mkdir -p /opt/win/build/openssl && \
-    curl -L $sslpackage | tar xz -C /opt/win/build/openssl --strip-components 1 && \
-    cd /opt/win/build/openssl && \
-    ./Configure --cross-compile-prefix=x86_64-w64-mingw32- \
-       --prefix=/opt/win/openssl --openssldir=/opt/win/openssl no-idea no-mdc2 no-rc5 shared mingw64 && \
     make install
 
 # dependency 3: zlib is already installed by apt libz-mingw-w64
