--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -593,6 +593,7 @@ if(NOT BUILD_OWNCLOUD_OSX_BUNDLE)
         install(FILES ${VISUAL_ELEMENTS} DESTINATION bin/visualelements)
         install(FILES "${theme_dir}/${APPLICATION_EXECUTABLE}.VisualElementsManifest.xml" DESTINATION bin)
         install(FILES ${client_I18N} DESTINATION i18n)
+        install(FILES ${CMAKE_SOURCE_DIR}/nmctheme_v1.rcc DESTINATION bin)
     endif()
 
     # we may not add MACOSX_BUNDLE here, if not building one
